formatting, styling, jinja-ing

--- a/themes/pelican-bootstrap-5/templates/footer.html
+++ b/themes/pelican-bootstrap-5/templates/footer.html
@@ -1,5 +1,5 @@
 
-<footer class="bg-dark text-white py-4">
+<footer class="bg-light py-4 mt-5 border-top">
     <div class="container">
       <div class="row">
         
@@ -13,10 +13,10 @@
         <div class="col-md-4">
           <h5>Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="/" class="text-white">Home</a></li>
-            <li><a href="/about" class="text-white">About</a></li>
-            <li><a href="/contact" class="text-white">Contact</a></li>
-            <li><a href="/labor" class="text-white">Labor & Travel Policy</a></li>
+            <li><a href="/" class="text-dark">Home</a></li>
+            <li><a href="/about" class="text-dark">About</a></li>
+            <li><a href="/contact" class="text-dark">Contact</a></li>
+            <li><a href="/labor" class="text-dark">Labor & Travel Policy</a></li>
           </ul>
         </div>
         
@@ -31,6 +31,10 @@
         </div>
   
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="text-center text-muted mt-3 mb-0">Website and original content Copyright &copy; {{ COPYRIGHT_YEAR }} Ready-1 LLC. All rights reserved.</p>
+        </div>
+      </div>
     </div>
   </footer>
-  
