--- a/themes/pelican-bootstrap-5/templates/base.html
+++ b/themes/pelican-bootstrap-5/templates/base.html
@@ -1,150 +1,15 @@
 <!DOCTYPE html>
 <html lang="{{ DEFAULT_LANG }}">
+  <head>
+    {% include "head.html" %} {% block head %}{% endblock %}
+  </head>
 
-<head>
-
-    <meta charset="UTF-8">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-
-    <!-- Open Graph data  -->
-    <meta property="og:title"         content="{{ SITENAME }}" />
-    <meta property="og:description"   content="{{ SITESUBTITLE }}" />
-    <meta property="og:image"         content="{{ THEME__OPEN_GRAPH_IMAGE }}" />
-    <meta property="og:type"          content="website" />
-    <meta property="og:url"           content="{{ SITEURL }}" />
-
-    <!-- default FB app id: 966242223397117 -->
-    <meta property="fb:app_id" content="{{ THEME__OPEN_GRAPH_FB_APP_ID }}" />
-
-    <!-- Bootstrap Icons -->
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/theme/assets/bootstrap-icons/font/fonts/bootstrap-icons.woff2">
-    <link rel="stylesheet" href="/theme/assets/bootstrap-icons/font/bootstrap-icons.css" >
-
-
-    <!-- Bootstrap CSS  -->
-    {% if THEME__BOOTSWATCH %} 
-        <link rel="stylesheet" href="/theme/assets/css/{{ THEME__BOOTSWATCH }}/bootstrap.min.css" type="text/css">
-    {% else %}
-        <link rel="stylesheet" href="/theme/assets/css/bootstrap.min.css" type="text/css">
-    {% endif %}
-
-    <!-- theme CSS -->
-    <link rel="stylesheet" href="/theme/assets/css/theme.css">
-
-    <!-- theme customization CSS -->
-    <link rel="stylesheet" href="/theme/assets/theme_custom.css">
- 
-
-    <link rel="apple-touch-icon" sizes="180x180" href="ZZZ???resources/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="ZZZ???resources/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="ZZZ???resources/favicon/favicon-16x16.png">
-
-    <link rel="manifest" href="site.webmanifest">
-
-    <title>{% block title %}{% endblock %}</title>
-
-</head>
-
-<body>
-    <div class="bs-component">
-        <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-          <div class="container-fluid">
-            
-            {% if SITELOGO %}
-                <img src="/images/{{ SITELOGO }}" class="mx-3"
-                    {% if SITELOGO_SIZE %}
-                        style="width: {{ SITELOGO_SIZE }};"
-                    {% endif %}
-                >
-            {% endif %}
-
-            <a class="navbar-brand h1" href="/">     
-            <span class="text-primary text-white h4">{{ SITENAME }}</span>
-            </a>
-        
-
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarColor01">
-              <ul class="navbar-nav me-auto">
-
-                <li class="nav-item">
-                  <a class="nav-link" href="/about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
-                  </li>
-              </ul>
-            </div>  
-            </div>
-          </div>
-        </nav>
-
-
+  <body>
     <!-- Navbar -->
-     <!--
-    <nav id="main_nav" class="navbar navbar-expand-lg navbar-dark bg-gray ">
-        <div class="container d-flex justify-content-between align-items-center">
+    {% include "navbar.html" %}
 
-            {% if SITELOGO %}
-                <img src="/images/{{ SITELOGO }}" class="mx-3"
-                    {% if SITELOGO_SIZE %}
-                        style="width: {{ SITELOGO_SIZE }};"
-                    {% endif %}
-                >
-            {% endif %}
-
-            <a class="navbar-brand h1" href="/">
-                 
-                <span class="text-primary text-gray h4">{{ SITENAME }}</span>
-            </a>
-
-            <button class="navbar-toggler border-0" type="button" 
-                data-bs-toggle="collapse" data-bs-target="#navbar-toggler-success" 
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-
-                <span class="navbar-toggler-icon"></span>
-
-            </button>
-
-            <div class="align-self-center collapse navbar-collapse flex-fill  d-lg-flex justify-content-lg-between" id="navbar-toggler-success">
-                
-                <div class="flex-fill mx-xl-5 mb-2">
-                    <ul class="nav navbar-nav d-flex justify-content-around mx-xl-5 text-center text-dark">
-                        {% for page in pages %}
-                            <li class="nav-item">
-                                <a class="nav-link rounded-pill px-3" 
-                                    href="/{{page.url}}">
-                                    {{page.title}}
-                                </a>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-
-                {% if SOCIAL %}
-                    <div class="navbar align-self-center d-flex border-0">
-                        {% for item in SOCIAL %}
-                            <a class="nav-link" href="{{ item[1] }}"><i class='bi-{{ item[0] }} text-primary'></i></a>
-                        {% endfor %}
-                    </div>
-                {% endif %}
-            </div>
-
-        </div>
-    </nav>
-
--->
-    <!-- End navbar -->
-
-
-    <div class="container">
-        {% block content %}{% endblock %}
-    </div>
+    <!-- Content -->
+    <div class="container">{% block content %}{% endblock %}</div>
 
     <!-- Footer -->
     {% include "footer.html" %}
@@ -155,8 +20,5 @@
     <script src="/theme/assets/js/theme.js"></script>
     <!-- Theme customizer JS -->
     <script src="/theme/assets/theme_custom.js"></script>
-
-</body>
-
-
-</html> 
+  </body>
+</html>
